compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/defaults.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_JVM_DECLARATIONS!>class C<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>fun `a$default`(c: C, x: Int, m: Int)<!> {}
    fun a(x: Int = 1) {}
}